# mktdata

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: node.h
mktgen/: gen.sh  randmkt.py  symfile.txt  symfileAllTckr.txt
